--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           </div>
           <div class="weather-image">
                <img src="images/clear.png">
+               <p id="weather-info"></p>
           </div>
           <div class="temp-container">    
                <h1 id="temp">30°C</h1>
