--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
      <div class="weather-container">
           <div class="search-box search-btn">
-               <input type="text" id="search-input" placeholder="Enter city name...">
+               <input type="text" id="search-input" placeholder="Enter city name..">
                <button><svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg></button>
           </div>
           <div class="weather-image">
                <img src="images/clear.png">
                <p id="weather-info"></p>
+               <p id="des"></p>
           </div>
           <div class="temp-container">    
                <h1 id="temp">30°C</h1>
