--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <div class="wind">
                     <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-wind"><path d="M17.7 7.7a2.5 2.5 0 1 1 1.8 4.3H2"/><path d="M9.6 4.6A2 2 0 1 1 11 8H2"/><path d="M12.6 19.4A2 2 0 1 0 14 16H2"/></svg>
                     <p>Wind Speed</p>
-                    <p id="wind">30 kmh/p</p>
+                    <p id="wind">30 km/h</p>
                </div>
           </div>
      </div>
